# govscape

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.embedding  Dockerfile.server  LICENSE  README.md  nginx_conf  pyproject.toml  stream_warc.py
govscape/: pyproject.toml
govscape/govscape/: __init__.py  config.py  filter.py  flask_server.py  indexing.py  jpg_to_embedding.py  npy_to_bin.py  pdf_to_embed.py  pdf_to_embed_multigpu.py  pdf_to_embedding.py  pdf_to_jpeg.py  query.py  s3_ec2_embedding_pipeline.py  s3_loader.py  sequential_pdf_to_embed.py  server.py  server_precomputed.py  server_s3.py  server_with_filter.py  single_pdf_to_embedding.py  stream_warc.py
govscape/govscape/api/: __init__.py  api.py  context.py
govscape/govscape/api/endpoints/: health.py  pages.py  search.py
govscape/govscape/cdx_manipulation/: read_cdx.py
govscape/govscape/data/embeddings/2KFFVFUDVRX2R6YK5XPVYL5NCBTSPZQ5/: 2KFFVFUDVRX2R6YK5XPVYL5NCBTSPZQ5_0.npy
govscape/govscape/data/embeddings/2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2/: 2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_3.npy  2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_4.npy  2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_8.npy
govscape/tests/: conftest.py  embedding_pipeline_test.py  start_server.py  test_embedding_pipeline.py  test_serving.py
govscape/tests/test_data/large/embeddings/24PLGFKOXBM56HKAEO7WQQ3WN37HGIWC/: 24PLGFKOXBM56HKAEO7WQQ3WN37HGIWC_0.npy
govscape/tests/test_data/large/embeddings/2KFFVFUDVRX2R6YK5XPVYL5NCBTSPZQ5/: 2KFFVFUDVRX2R6YK5XPVYL5NCBTSPZQ5.json  2KFFVFUDVRX2R6YK5XPVYL5NCBTSPZQ5_0.npy  2KFFVFUDVRX2R6YK5XPVYL5NCBTSPZQ5_1.npy  2KFFVFUDVRX2R6YK5XPVYL5NCBTSPZQ5_2.npy  2KFFVFUDVRX2R6YK5XPVYL5NCBTSPZQ5_3.npy
govscape/tests/test_data/large/embeddings/2M4ILVPVUWNZZ7TDPFSTHCRYD5DAICRH/: 2M4ILVPVUWNZZ7TDPFSTHCRYD5DAICRH_0.npy  2M4ILVPVUWNZZ7TDPFSTHCRYD5DAICRH_1.npy  2M4ILVPVUWNZZ7TDPFSTHCRYD5DAICRH_2.npy
govscape/tests/test_data/large/embeddings/2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2/: 2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_0.npy  2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_1.npy  2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_2.npy  2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_3.npy  2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_4.npy  2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_5.npy  2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_6.npy  2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_7.npy  2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_8.npy  2SOZ6QSIS6O3CQZDZEXKZFRHRAH2P3W2_9.npy
govscape/tests/test_data/large/embeddings/2ZQ4J3XONU5AG4H6Q4FSAKDADDSMVV7S/: 2ZQ4J3XONU5AG4H6Q4FSAKDADDSMVV7S_0.npy  2ZQ4J3XONU5AG4H6Q4FSAKDADDSMVV7S_1.npy  2ZQ4J3XONU5AG4H6Q4FSAKDADDSMVV7S_2.npy
govscape/tests/test_data/large/embeddings/32FOWPF2WZT3TN74VOWD6NAVD4CSX3WB/: 32FOWPF2WZT3TN74VOWD6NAVD4CSX3WB_0.npy  32FOWPF2WZT3TN74VOWD6NAVD4CSX3WB_1.npy  32FOWPF2WZT3TN74VOWD6NAVD4CSX3WB_2.npy  32FOWPF2WZT3TN74VOWD6NAVD4CSX3WB_3.npy  32FOWPF2WZT3TN74VOWD6NAVD4CSX3WB_4.npy  (+3 more)
govscape/tests/test_data/large/queries/: test.txt
govscape/tests/test_files/: test.json
(+10159 files in other folders)
