# src/pyproject.toml
[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <your@name.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
govscape = { path = "govscape", develop = true }
pymupdf = "^1.25.5"
sentence-transformers = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
