# src/pyproject.toml
[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <your@name.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
govscape = { path = "govscape", develop = true }
warcio = "^1.7.5"
boto3 = "^1.38.36"
pyarrow = "^20.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
